...

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggleBatchButton"
            style="@style/Widget.GrxFirma.Button.TextButton"
            android:layout_width="0dp"
...

        <com.google.android.material.button.MaterialButton
            android:id="@+id/batchHelp"
            style="@style/Widget.GrxFirma.HelpButton"
            android:layout_width="48dp"
...

    <LinearLayout
        android:id="@+id/batchGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectBatchButton"
            style="@style/Widget.GrxFirma.Button.OutlinedButton"
            android:layout_width="match_parent"
...

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signBatchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggleHashButton"
        style="@style/Widget.GrxFirma.Button.TextButton"
        android:layout_width="match_parent"
...

    <LinearLayout
        android:id="@+id/hashGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hashAlgorithmHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hashFormatHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createHashButton"
                android:layout_width="0dp"
                android:layout_weight="1"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createHashHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

    <com.google.android.material.button.MaterialButton
        android:id="@+id/toggleProtectButton"
        style="@style/Widget.GrxFirma.Button.TextButton"
        android:layout_width="match_parent"
...

    <LinearLayout
        android:id="@+id/protectGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/protectionContainerHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addRecipientHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/protectKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/protectKeyHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/protectButton"
                android:layout_width="0dp"
                android:layout_weight="1"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/protectHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/protectSignHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/unprotectButton"
                style="@style/Widget.GrxFirma.Button.OutlinedButton"
                android:layout_width="0dp"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/unprotectHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
...
