...
            android:minHeight="48dp"
            android:text="@string/verifactu_title"
            app:icon="@drawable/ic_expand_more"
            app:iconGravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verifactuHelp"
            style="@style/Widget.GrxFirma.HelpButton"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </LinearLayout>

    <LinearLayout
...
            android:minHeight="48dp"
            android:text="@string/eni_title"
            app:icon="@drawable/ic_expand_more"
            app:iconGravity="end" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eniHelp"
            style="@style/Widget.GrxFirma.HelpButton"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </LinearLayout>

    <LinearLayout
...
                    android:maxLength="160"
                    android:minHeight="48dp"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eniMetadataHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp" />
        </LinearLayout>

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eniOriginHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp" />
        </LinearLayout>

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eniStateHelp"
                style="@style/Widget.GrxFirma.HelpButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp" />
        </LinearLayout>

...
